--- a/coffee-shop/src/css/contact.css
+++ b/coffee-shop/src/css/contact.css
@@ -6,13 +6,6 @@
     position: relative;
 }
 
-/* .contact-us::before {
-    content: '';
-    width: 50%;
-    height: 50px;
-    background-color: #272727;
-    transform: skew(40deg);
-} */
 
 .contact-text {
     width: 200px;
@@ -43,6 +36,28 @@
     justify-content: center;
     align-items: center;
 
+}
+
+.contact-wayes::before {
+    content: '';
+    width: 60%;
+    height: 125px;
+    background-color: #272727;
+    position: absolute;
+    top: -50px;
+    left: 0;
+    transform: skewY(10deg);
+}
+
+.contact-wayes::after {
+    content: '';
+    width: 60%;
+    height: 125px;
+    background-color: #272727;
+    position: absolute;
+    top: -50px;
+    right: 0;
+    transform: skewY(-10deg);
 }
 
 .contact-wayes h3 {
@@ -196,6 +211,7 @@ textarea {
     resize: none;
     width: 100%;
     background-color: #272727;
+    color: #FFF;
     padding: 5px 0;
     border: none;
     border-bottom: 1px solid #777;
